# CHROME

./: .dockerignore  .gitignore  Dockerfile  README.md  README_HF_SPACES.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
chrome_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
examples/: rollout_demo.py
server/: Dockerfile  __init__.py  app.py  hr_environment.py
tests/: inference_gemini_3.1_flash_lite.md  test_hr_env.py
